2010-04-16  Jonathan Pryor <jpryor@novell.com>

	* Makefile: Add System.Xml.Linq.dll to the referenced assemblies.
	* Mono.Documentation/webdoc.cs: Allow .source files to be provided to
	  'mdoc export-html-webdoc', which will cause the .source files to be
	  read and all referenced .tree/.zip files to be processed.

2010-04-16  Jonathan Pryor <jpryor@novell.com>

	* Mono.Documentation/monodocer.cs: Use Int64 instead of UInt64 for
	  enum values, so that we can properly capture negative values.

2010-02-28  Jonathan Pryor <jpryor@novell.com>

	* Mono.Documentation/webdoc.cs: Add --use-system-sources option so
	  that 'mdoc export-html-webdoc' will use the system-installed sources
	  in addition to any -r'd sources (which was the behavior 2 commits
	  ago).

2010-02-26  Jonathan Pryor <jpryor@novell.com>

	* Mono.Documentation/assembler.cs: Allow other apps to get the same
	  '--format' logic, specifically 'mdoc export-html-webdoc'.
	* Mono.Documentation/webdoc.cs: Allow it to be more "stand-alone".
	  Previously, it would depend upon the system-wide .source files.
	  This is bad, because you might want to generate the 'cache'
	  directory for a different installation, with a different set of
	  .tree/.zip/.source files, and you might not want to replace your own
	  and/or you often forget, as is the case with me.  Instead, allow a 
	  format to be specified for .tree files, and allow additional .source 
	  files to be referenced so that extension methods will be found within
	  the specified sources.  This allows for a "stand-alone" method of 
	  operation w/o depending upon the system-wide .source files.

2010-01-11  Jonathan Pryor <jpryor@novell.com>

	* Mono.Documentation/monodocs2slashdoc.cs: Fix NamespaceSummaries.xml
	  generation to look at the ns-NAMESPACE.xml files, not just
	  NAMESPACE.xml files.

2009-12-03  Jonathan Pryor <jpryor@novell.com>

	* Resources/stylesheet.xsl: Add support for generating namespace links
	  for <see cref="N:..." />.